--- a/index.html
+++ b/index.html
@@ -14,6 +14,10 @@
     <!-- My CSS -->
     <link rel="stylesheet" href="style.css" />
 
+    <!-- Gallery -->
+    <link rel="stylesheet" href="css/reset.css" />
+    <link rel="stylesheet" href="css/style.css" />
+
     <title>My Portfolio | Ayu Dariah Sakinah</title>
   </head>
   <body id="home">
@@ -33,6 +37,9 @@
               <a class="nav-link" href="#about">About</a>
             </li>
             <li class="nav-item">
+              <a class="nav-link" href="#skills">Skills</a>
+            </li>
+            <li class="nav-item">
               <a class="nav-link" href="#projects">Projects</a>
             </li>
             <li class="nav-item">
@@ -43,26 +50,25 @@
       </div>
     </nav>
 
-    <!-- Akhir Navbar -->
+    <!-- End Navbar -->
 
     <!-- Jumbotron -->
     <section class="jumbotron text-center">
       <img src="img/foto.jpg" alt="Ayu Sakinah" width="190" class="rounded-circle img-thumbnail" />
       <h1 class="display-4">Ayu Sakinah</h1>
-      <p class="lead">Student | Physics</p>
-      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
-        <path
-          fill="#ededed"
-          fill-opacity="1"
-          d="M0,160L26.7,154.7C53.3,149,107,139,160,122.7C213.3,107,267,85,320,90.7C373.3,96,427,128,480,128C533.3,128,587,96,640,90.7C693.3,85,747,107,800,112C853.3,117,907,107,960,106.7C1013.3,107,1067,117,1120,122.7C1173.3,128,1227,128,1280,117.3C1333.3,107,1387,85,1413,74.7L1440,64L1440,320L1413.3,320C1386.7,320,1333,320,1280,320C1226.7,320,1173,320,1120,320C1066.7,320,1013,320,960,320C906.7,320,853,320,800,320C746.7,320,693,320,640,320C586.7,320,533,320,480,320C426.7,320,373,320,320,320C266.7,320,213,320,160,320C106.7,320,53,320,27,320L0,320Z"
-        ></path>
-      </svg>
+      <p class="lead text-light">Student | Physics</p>
     </section>
-
-    <!-- Akhir Jumbotron -->
+    <!-- End Jumbotron -->
 
     <!-- About -->
     <section id="about">
+      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
+        <path
+          fill="#fdb36e"
+          fill-opacity="1"
+          d="M0,256L30,240C60,224,120,192,180,181.3C240,171,300,181,360,170.7C420,160,480,128,540,138.7C600,149,660,203,720,224C780,245,840,235,900,234.7C960,235,1020,245,1080,229.3C1140,213,1200,171,1260,170.7C1320,171,1380,213,1410,234.7L1440,256L1440,0L1410,0C1380,0,1320,0,1260,0C1200,0,1140,0,1080,0C1020,0,960,0,900,0C840,0,780,0,720,0C660,0,600,0,540,0C480,0,420,0,360,0C300,0,240,0,180,0C120,0,60,0,30,0L0,0Z"
+        ></path>
+      </svg>
       <div class="container">
         <div class="row text-center mb-3">
           <div class="col">
@@ -70,11 +76,73 @@
           </div>
         </div>
         <div class="row justify-content-center fs-5 text-center">
-          <div class="col-md-4">
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Expedita et aspernatur enim minus necessitatibus ad quibusdam esse unde omnis illo.</p>
+          <div class="col-md-8">
+            <p>
+              Hello! My name is Ayu Dariah Sakinah, you can call me Ayu. I am a 5th student at IPB University in Physics major. Although from non-IT background and as a beginner in web developer, I've a spirit to learn about tools which
+              needed in build a website.
+            </p>
           </div>
-          <div class="col-md-4">
-            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sit, mollitia facilis ad rem doloremque autem placeat cupiditate non, numquam eveniet sapiente blanditiis quaerat fugiat repellat.</p>
+        </div>
+      </div>
+    </section>
+    <!-- End About -->
+
+    <!-- Skills -->
+    <section id="skills">
+      <div class="container">
+        <div class="row text-center mb-3">
+          <div class="col">
+            <h2>What Can I Do?</h2>
+          </div>
+        </div>
+        <div class="row justify-content-evenly">
+          <div class="container1">
+            <div class="container2">
+              <ul class="gallery">
+                <li>
+                  <a
+                    href="
+                    "
+                    ><img src="img2/thumb/html.jpg" alt="logo-HTMl" />
+                    <span>HTML</span>
+                  </a>
+                </li>
+
+                <li>
+                  <a
+                    href="
+                    "
+                    ><img src="img2/thumb/CSS.jpg" alt="logo-CSS" />
+                    <span>CSS</span>
+                  </a>
+                </li>
+                <li>
+                  <a
+                    href="
+                    "
+                    ><img src="img2/thumb/bootstrap-logo.jpg" alt="logo-Bootstrap" />
+                    <span>Bootstrap</span>
+                  </a>
+                </li>
+                <li>
+                  <a
+                    href="
+                    "
+                    ><img src="img2/thumb/mysql.jpg" alt="logo-MySQL" />
+                    <span>MySQL</span>
+                  </a>
+                </li>
+                <li>
+                  <a
+                    href="
+                    "
+                    ><img src="img2/thumb/new-php-logo.jpg" alt="logo-PHP" />
+                    <span>PHP</span>
+                  </a>
+                </li>
+                <div class="clear"></div>
+              </ul>
+            </div>
           </div>
         </div>
       </div>
@@ -86,54 +154,46 @@
         ></path>
       </svg>
     </section>
-    <!-- Akhir About -->
+    <!-- End Skills -->
 
     <!-- Projects -->
     <section id="projects">
       <div class="container">
-        <div class="row text-center mb-3">
+        <div class="row text-light text-center mb-4">
           <div class="col">
             <h2>My Projects</h2>
           </div>
         </div>
         <div class="row justify-content-center">
-          <div class="col-md-4 mb-3">
+          <div class="col-md-5 mb-3">
             <div class="card">
-              <img src="img/projects/hardware.jpg" class="card-img-top" alt="Project 1" />
+              <img src="img/projects/latihanhyperlink.jpg" class="card-img-top" alt="Project 1" />
               <div class="card-body">
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                <p class="card-text">This is the plain web with hyperlink, using basic html</p>
               </div>
             </div>
           </div>
-          <div class="col-md-4 mb-3">
+          <div class="col-md-5 mb-3">
             <div class="card">
-              <img src="img/projects/coding.jpg" class="card-img-top" alt="Project 2" />
+              <img src="img/projects/tabelmodif.png" class="card-img-top" alt="Project 2" />
               <div class="card-body">
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                <p class="card-text">Trying to made simple table modification, using html</p>
               </div>
             </div>
           </div>
-          <div class="col-md-4 mb-3">
+          <div class="col-md-5 mb-3">
             <div class="card">
-              <img src="img/projects/grafis.jpg" class="card-img-top" alt="Project 3" />
+              <img src="img/projects/form.png" class="card-img-top" alt="Project 3" />
               <div class="card-body">
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                <p class="card-text">Created ordinary user form, using html</p>
               </div>
             </div>
           </div>
-          <div class="col-md-4 mb-3">
+          <div class="col-md-5 mb-3">
             <div class="card">
-              <img src="img/projects/laptop.jpg" class="card-img-top" alt="Project 4" />
+              <img src="img/projects/portallogin.png" class="card-img-top" alt="Project 4" />
               <div class="card-body">
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-4 mb-3">
-            <div class="card">
-              <img src="img/projects/monitor.jpg" class="card-img-top" alt="Project 5" />
-              <div class="card-body">
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                <p class="card-text justify-content-center">Trying to made login portal instagram which impose tabel, and form comprehension, using html, css, and bootstrap</p>
               </div>
             </div>
           </div>
@@ -147,7 +207,7 @@
         ></path>
       </svg>
     </section>
-    <!-- Akhir Projects -->
+    <!-- End Projects -->
 
     <!-- Contact -->
     <section id="contact">
@@ -166,7 +226,7 @@
               </div>
               <div class="mb-3">
                 <label for="email" class="form-label">Email</label>
-                <input type="email" class="form-control" id="email" aria-describedby="email" placeholder="name@gmail.com" />
+                <input type="email" class="form-control" id="email" aria-describedby="email" placeholder="name@email.com" />
               </div>
               <div class="mb-3">
                 <label for="suggest" class="form-label">Suggest</label>
@@ -185,7 +245,7 @@
         ></path>
       </svg>
     </section>
-    <!-- Akhir Contact -->
+    <!-- End Contact -->
 
     <!-- Footer -->
     <footer class="text-light text-center pb-4" style="background-color: #fd7405f5">
@@ -193,7 +253,7 @@
         Created with <i class="bi bi-person-circle text-danger"></i> by <i><a href="https://www.instagram.com/ayusknh/" class="text-light fw-bold">Ayu Dariah Sakinah</a></i>
       </p>
     </footer>
-    <!-- Akhir Footer -->
+    <!-- End Footer -->
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
   </body>
